# CV-Training

./: README.md  pyproject.toml
notebooks/: convert_avi_to_mp4.py  crop_video.ipynb  entropy_video.ipynb  save_video.ipynb
notebooks/OCR/: 01_vision.ipynb  02. Click_based_ocr_detection.ipynb  02_click_based_ocr_detection.ipynb
notebooks/classification/: workflow.ipynb
notebooks/classification/multi_label_image_collection/: 1.collect_crops.ipynb
notebooks/object_detection/: 1. annotation.ipynb  3. eval.ipynb  3. training.ipynb  annotation.ipynb  eval.ipynb  inference.ipynb  model_inference.py  training.ipynb  video_inference.ipynb
notebooks/object_detection/image_collection/: 1.save_images.py  3. filter_images_based_on_threshold.py  4. rename_files.py  cal_entropy_folders.py
notebooks/segmentation/: workflow.ipynb
notebooks/segmentation/filter_using_validity_classifier_model/: 0. model_inference_on_1_image.py  1. filter_images_from_dir  1. filter_images_from_dir.py
notebooks/segmentation/image_collection/: 1. filter_images_of_specific_labels_from_json_file.py  1.collect_crops.ipynb  README.md  x.ipynb  (+7 more)
src/classification/: trainer.py  visualizer.py
src/detection/: annotator.py  annotator_vision_tools.py  coco_eval.py  compare_videos.py  data_loader.py  elasticsearch_logging.py  engine.py  utils.py  video_capture.py  visualizer.py
src/ocr/: apple_vision_utils.py
src/segmentation/: annotator.py  config.py  dataset.py  inference.py  model.py  trainer.py  utils.py
src/utils/: api_handler.py  entropy.py  image_helper.py  video_writer.py  vision_utils.py
(+3 files in other folders)
