[tool.poetry]
name = "cv-training"
version = "0.0.1"
description = "A collection of components for fine-tuning Computer Vision models on various tasks."
authors = ["Sandy Pashikanti <sandypashikanti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.26.4"
pandas = "1.5.3"
opencv-python = "4.10.0.84"
pillow = "11.0.0"
torch= "2.2.2"
torchvision= "0.17.2"
pycocotools = "2.0.8"
requests = "2.32.3"
notebook = "7.2.2"
cryptography = "43.0.3"
matplotlib = "3.9.2"
scikit-learn = "1.1.3"
segmentation-models-pytorch = "0.3.4"
tqdm = "4.67.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.9.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["test"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["cv-training"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
